# castreciever-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml  windows-release.yml
src/: App.cpp  App.h  AppMessages.h  HResult.h  Log.cpp  Log.h  MainWindow.cpp  MainWindow.h  StringUtil.h  main.cpp
src/airplay/: AirPlayDeviceId.cpp  AirPlayDeviceId.h  AirPlayDiscoveryService.cpp  AirPlayDiscoveryService.h  AirPlayFeatures.cpp  AirPlayFeatures.h  AirPlaySourceAdapter.cpp  AirPlaySourceAdapter.h
src/audio/: IAudioPlayer.h  WasapiPcmRelay.cpp  WasapiPcmRelay.h
src/core/: ClockMapper.cpp  ClockMapper.h  FlowController.cpp  FlowController.h  FrameQueue.cpp  FrameQueue.h  MediaCore.cpp  MediaCore.h  MediaTypes.h
src/device/: UacDeviceEnumerator.cpp  UacDeviceEnumerator.h  UvcDeviceEnumerator.cpp  UvcDeviceEnumerator.h
src/hid/: AxtpHidMediaProtocol.cpp  AxtpHidMediaProtocol.h  AxtpRuntimeHidAdapter.cpp  AxtpRuntimeHidAdapter.h  HidMediaExperimentalAdapter.cpp  HidMediaExperimentalAdapter.h
src/source/: ISourceAdapter.h  SessionManager.cpp  SessionManager.h  UsbUvcSourceAdapter.cpp  UsbUvcSourceAdapter.h
src/ui/: OverlayControls.cpp  OverlayControls.h
src/video/: IVideoPlayer.h  MfCapturePreviewPlayer.cpp  MfCapturePreviewPlayer.h  SelfTestVideoPlayer.cpp  SelfTestVideoPlayer.h  SourceReaderD3D11Player.cpp  SourceReaderD3D11Player.h
